# Bankeiro

./: AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.discord  Dockerfile.telegram  Dockerfile.wpp  HISTORY.rst  Makefile  README.md  README.rst  docker-compose.yaml  pg_config  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
middlewares/: process_logger.py
src/bankero/: __init__.py  cli.py
tests/: __init__.py  test_bankero.py
