[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bankero"
version = "0.1.0"
description = "Bankero is a financial assistent"
readme = "README.rst"
authors = [
  {name = "José Alexandre", email = "alexandreaddres@gmail.com"}
]
maintainers = [
  {name = "José Alexandre", email = "alexandreaddres@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/upalx/bankero/issues"
changelog = "https://github.com/upalx/bankero/blob/master/changelog.md"
homepage = "https://github.com/upalx/bankero"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

